monsterdog_system/infra/k8s_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: monsterdog-lb
  labels:
    app: monsterdog
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: monsterdog
    component: system
